pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/unbalancedEntryBrackets4.pkl
res = new {
  [name == "Pigeon"] ] { age = 42 }
}
